@@ -100,6 +100,8 @@
 #undef HAVE_INDEXCHANNEL
 /* Introduced in IM 5.5.6 */
 #undef HAVE_IMAGE_EXTRACT_INFO
+/* Introduced in IM 6.0.0 */
+#undef HAVE_IMAGE_ORIENTATION
 /* Introduced in IM 5.5.6 */
 #undef HAVE_IMAGEINFO_NUMBER_SCENES
 /* Introduced in IM 5.5.7, GM 1.1 */
