@@ -1,5 +1,7 @@
 RMagick 1.8.0
     o Added Image#shadow (ImageMagick 6.1.7)
+    o Added Image#quality and Image#orientation attributes (bug #1310)
+    o Fix bug #1314
 
 RMagick 1.7.1
     o Fix bugs #1250, #1253
